src/test/deca/context/valid/use_declared_field.deca
/*
    Description : Utilisation d'un champ qui existe

    Résultat : OK
*/
class A{
    int y = 5;
    void x(){
        println(y);
    }
}

