src/test/deca/context/invalid/use_undeclared_field.deca
/*
    Description : Utilisation d'un champ qui n'existe pas

    Résultat : erreur contextuelle (deca:8:16)
*/
class A{
    void x(){
        println(y);
    }
}
// @expected_output deca:8:16

